{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 170,
  "lineage": "9c0f1c6f-93f7-c20e-35c7-3f831a7be8db",
  "resources": [
    {
      "module": "module.Security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:security-group/sg-006cec3ba7c67dddd",
            "description": "security group from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-006cec3ba7c67dddd",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "423636639962",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "sg-006cec3ba7c67dddd",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:security-group/sg-08611db6c7bae0c07",
            "description": "Application security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08611db6c7bae0c07",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-006cec3ba7c67dddd"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "application-sg",
            "name_prefix": "",
            "owner_id": "423636639962",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "application-sg"
            },
            "tags_all": {
              "Name": "application-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "sg-08611db6c7bae0c07",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Security_groups.aws_security_group.this_alb_sg",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.Security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:security-group/sg-04745b76e90d12dc5",
            "description": "Database Security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04745b76e90d12dc5",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08611db6c7bae0c07"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "database-sg",
            "name_prefix": "",
            "owner_id": "423636639962",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "database-sg"
            },
            "tags_all": {
              "Name": "database-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "sg-04745b76e90d12dc5",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.Security_groups.aws_security_group.this_alb_sg",
            "module.Security_groups.aws_security_group.this_app_sg",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:loadbalancer/app/three-tier-alb/5394d67df4581ad6",
            "arn_suffix": "app/three-tier-alb/5394d67df4581ad6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "three-tier-alb-881728508.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:loadbalancer/app/three-tier-alb/5394d67df4581ad6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "three-tier-alb",
            "preserve_host_header": false,
            "region": "ap-south-1",
            "security_groups": [
              "sg-006cec3ba7c67dddd"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-044a871f57ab1c323"
              },
              {
                "subnet_id": "subnet-095a0536df5da321b"
              }
            ],
            "subnets": [
              "subnet-044a871f57ab1c323",
              "subnet-095a0536df5da321b"
            ],
            "tags": {
              "Name": "three-tier-alb"
            },
            "tags_all": {
              "Name": "three-tier-alb"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:loadbalancer/app/three-tier-alb/5394d67df4581ad6"
          },
          "dependencies": [
            "module.Security_groups.aws_security_group.this_alb_sg",
            "module.networking.aws_subnet.this_public_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "this_http_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:listener/app/three-tier-alb/5394d67df4581ad6/570d80b0ea2248c1",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:targetgroup/Application-TG/602744377c2fee65",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:listener/app/three-tier-alb/5394d67df4581ad6/570d80b0ea2248c1",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:loadbalancer/app/three-tier-alb/5394d67df4581ad6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "ap-south-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:listener/app/three-tier-alb/5394d67df4581ad6/570d80b0ea2248c1"
          },
          "dependencies": [
            "module.Security_groups.aws_security_group.this_alb_sg",
            "module.alb.aws_lb.this_alb",
            "module.alb.aws_lb_target_group.this_app_lb_tg",
            "module.networking.aws_subnet.this_public_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "this_app_lb_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:targetgroup/Application-TG/602744377c2fee65",
            "arn_suffix": "targetgroup/Application-TG/602744377c2fee65",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:targetgroup/Application-TG/602744377c2fee65",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "Application-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "ap-south-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "Application-TG"
            },
            "tags_all": {
              "Name": "Application-TG"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:targetgroup/Application-TG/602744377c2fee65"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0081672cf20076b76",
            "arn": "arn:aws:ec2:ap-south-1:423636639962:instance/i-0da9f1709bfe2bf07",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "EC2-SSM-PROFILE",
            "id": "i-0da9f1709bfe2bf07",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "three-tier-tf-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-08dd362d9d31a6dd2"
              }
            ],
            "primary_network_interface_id": "eni-08dd362d9d31a6dd2",
            "private_dns": "ip-10-0-3-179.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.179",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0944d3b988af61374",
                "volume_size": 30,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e66ca5f91dded67f",
            "tags": {
              "Name": "application-server"
            },
            "tags_all": {
              "Name": "application-server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08611db6c7bae0c07"
            ]
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "user_data"
              }
            ]
          ],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "i-0da9f1709bfe2bf07",
            "region": "ap-south-1"
          },
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.Security_groups.aws_security_group.this_alb_sg",
            "module.Security_groups.aws_security_group.this_app_sg",
            "module.iam.aws_iam_instance_profile.this_ec2_ssm_profile",
            "module.iam.aws_iam_role.this_ec2_ssm_role",
            "module.keypair.aws_key_pair.this_key_pair",
            "module.keypair.tls_private_key.this_key",
            "module.networking.aws_subnet.this_private_app_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:targetgroup/Application-TG/602744377c2fee65,i-0da9f1709bfe2bf07,80",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:targetgroup/Application-TG/602744377c2fee65",
            "target_id": "i-0da9f1709bfe2bf07"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "port": 80,
            "region": "ap-south-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:423636639962:targetgroup/Application-TG/602744377c2fee65",
            "target_id": "i-0da9f1709bfe2bf07"
          },
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "module.Security_groups.aws_security_group.this_alb_sg",
            "module.Security_groups.aws_security_group.this_app_sg",
            "module.alb.aws_lb_target_group.this_app_lb_tg",
            "module.ec2.aws_instance.app",
            "module.iam.aws_iam_instance_profile.this_ec2_ssm_profile",
            "module.iam.aws_iam_role.this_ec2_ssm_role",
            "module.keypair.aws_key_pair.this_key_pair",
            "module.keypair.tls_private_key.this_key",
            "module.networking.aws_subnet.this_private_app_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "this_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fcc117d3befa10d",
            "arn": "arn:aws:ec2:ap-south-1:423636639962:elastic-ip/eipalloc-00fcc117d3befa10d",
            "domain": "vpc",
            "id": "eipalloc-00fcc117d3befa10d",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-52-66-30-14.ap-south-1.compute.amazonaws.com",
            "public_ip": "52.66.30.14",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Name": "nat-eip"
            },
            "tags_all": {
              "Name": "nat-eip"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "eipalloc-00fcc117d3befa10d",
            "region": "ap-south-1"
          }
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:internet-gateway/igw-08fdc760dc988e53e",
            "id": "igw-08fdc760dc988e53e",
            "owner_id": "423636639962",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudethix-Internet-Gateway"
            },
            "tags_all": {
              "Name": "cloudethix-Internet-Gateway"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "igw-08fdc760dc988e53e",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00fcc117d3befa10d",
            "association_id": "eipassoc-0fb0fabfcb0a3dc2c",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0379a46e06b0342a7",
            "network_interface_id": "eni-0ee4c0891c7bf2c9f",
            "private_ip": "10.0.1.68",
            "public_ip": "52.66.30.14",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-095a0536df5da321b",
            "tags": {
              "Name": "three_tier_nat"
            },
            "tags_all": {
              "Name": "three_tier_nat"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "nat-0379a46e06b0342a7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_eip.this_eip",
            "module.networking.aws_internet_gateway.this_igw",
            "module.networking.aws_subnet.this_public_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_database_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:route-table/rtb-0e653f700afa066c7",
            "id": "rtb-0e653f700afa066c7",
            "owner_id": "423636639962",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "Database-rt"
            },
            "tags_all": {
              "Name": "Database-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtb-0e653f700afa066c7",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:route-table/rtb-0df7bd2e5e00b4add",
            "id": "rtb-0df7bd2e5e00b4add",
            "owner_id": "423636639962",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0379a46e06b0342a7",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtb-0df7bd2e5e00b4add",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_eip.this_eip",
            "module.networking.aws_internet_gateway.this_igw",
            "module.networking.aws_nat_gateway.this_nat",
            "module.networking.aws_subnet.this_public_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "this_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:route-table/rtb-0fff4df105fd32cfa",
            "id": "rtb-0fff4df105fd32cfa",
            "owner_id": "423636639962",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08fdc760dc988e53e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtb-0fff4df105fd32cfa",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this_igw",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057732bc15158156f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e653f700afa066c7",
            "subnet_id": "subnet-0b1b6cc771bc6beee"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtbassoc-057732bc15158156f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.this_database_rt",
            "module.networking.aws_subnet.this_private_db_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-084090c65dda2acb8",
            "region": "ap-south-1",
            "route_table_id": "rtb-0e653f700afa066c7",
            "subnet_id": "subnet-05cfaeb305d276d3b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtbassoc-084090c65dda2acb8",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_route_table.this_database_rt",
            "module.networking.aws_subnet.this_private_db_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09949e61f8f01f0de",
            "region": "ap-south-1",
            "route_table_id": "rtb-0df7bd2e5e00b4add",
            "subnet_id": "subnet-0e66ca5f91dded67f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtbassoc-09949e61f8f01f0de",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_eip.this_eip",
            "module.networking.aws_internet_gateway.this_igw",
            "module.networking.aws_nat_gateway.this_nat",
            "module.networking.aws_route_table.this_private_rt",
            "module.networking.aws_subnet.this_private_app_subnet",
            "module.networking.aws_subnet.this_public_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ef46fdfe20e0e6f",
            "region": "ap-south-1",
            "route_table_id": "rtb-0df7bd2e5e00b4add",
            "subnet_id": "subnet-01a3748e792063f43"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtbassoc-00ef46fdfe20e0e6f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_eip.this_eip",
            "module.networking.aws_internet_gateway.this_igw",
            "module.networking.aws_nat_gateway.this_nat",
            "module.networking.aws_route_table.this_private_rt",
            "module.networking.aws_subnet.this_private_app_subnet",
            "module.networking.aws_subnet.this_public_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "this_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba00469974468ee1",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fff4df105fd32cfa",
            "subnet_id": "subnet-095a0536df5da321b"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtbassoc-0ba00469974468ee1",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this_igw",
            "module.networking.aws_route_table.this_public_rt",
            "module.networking.aws_subnet.this_public_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089a5c2c265a78457",
            "region": "ap-south-1",
            "route_table_id": "rtb-0fff4df105fd32cfa",
            "subnet_id": "subnet-044a871f57ab1c323"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "rtbassoc-089a5c2c265a78457",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.this_igw",
            "module.networking.aws_route_table.this_public_rt",
            "module.networking.aws_subnet.this_public_subnet",
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_private_app_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:subnet/subnet-0e66ca5f91dded67f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e66ca5f91dded67f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423636639962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "App_Subnet-1"
            },
            "tags_all": {
              "Name": "App_Subnet-1"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "subnet-0e66ca5f91dded67f",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:subnet/subnet-01a3748e792063f43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a3748e792063f43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423636639962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "App_Subnet-2"
            },
            "tags_all": {
              "Name": "App_Subnet-2"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "subnet-01a3748e792063f43",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_private_db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:subnet/subnet-0b1b6cc771bc6beee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1b6cc771bc6beee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423636639962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "DB_Subnet-1"
            },
            "tags_all": {
              "Name": "DB_Subnet-1"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "subnet-0b1b6cc771bc6beee",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:subnet/subnet-05cfaeb305d276d3b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05cfaeb305d276d3b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "423636639962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "DB_Subnet-2"
            },
            "tags_all": {
              "Name": "DB_Subnet-2"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "subnet-05cfaeb305d276d3b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "this_public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:subnet/subnet-095a0536df5da321b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-095a0536df5da321b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423636639962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "subnet-095a0536df5da321b",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:subnet/subnet-044a871f57ab1c323",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044a871f57ab1c323",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "423636639962",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "public-subnet-2"
            },
            "tags_all": {
              "Name": "public-subnet-2"
            },
            "vpc_id": "vpc-0ee7cdbf4d506c65e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "subnet-044a871f57ab1c323",
            "region": "ap-south-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.this_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:423636639962:vpc/vpc-0ee7cdbf4d506c65e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0910a743e466410d2",
            "default_route_table_id": "rtb-01a4db4716cd8486c",
            "default_security_group_id": "sg-00cc5dbde63958685",
            "dhcp_options_id": "dopt-0b75782504462beb4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ee7cdbf4d506c65e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a4db4716cd8486c",
            "owner_id": "423636639962",
            "region": "ap-south-1",
            "tags": {
              "Name": "cloudethix-vpc"
            },
            "tags_all": {
              "Name": "cloudethix-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "423636639962",
            "id": "vpc-0ee7cdbf4d506c65e",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}